update home url

--- a/src/api/templates/home.html
+++ b/src/api/templates/home.html
@@ -17,7 +17,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="#">🚩 Flagship</a>
+    <a class="navbar-brand fw-bold" href="{{ url_for('home') }}">🚩 Flagship</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="https://github.com/iplitharas/flagship" target="_blank">GitHub</a></li>
