--- a/src/api/templates/home.html
+++ b/src/api/templates/home.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Flagship Dashboard</title>
+  <title>Flagbit</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -17,10 +17,10 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand fw-bold" href="{{ url_for('home') }}">🚩 Flagship</a>
+    <a class="navbar-brand fw-bold" href="{{ url_for('home') }}"> 🚩 Flagbit</a>
     <div class="collapse navbar-collapse">
       <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="https://github.com/iplitharas/flagship" target="_blank">GitHub</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://github.com/iplitharas/flagbit" target="_blank">GitHub</a></li>
         <li class="nav-item"><a class="nav-link" href="https://your-docs-url" target="_blank">Docs</a></li>
         <li class="nav-item"><a class="nav-link" href="#" target="_blank">About</a></li>
       </ul>
