--- a/src/api/templates/home.html
+++ b/src/api/templates/home.html
@@ -22,7 +22,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link" href="https://github.com/iplitharas/flagbit" target="_blank">GitHub</a></li>
         <li class="nav-item"><a class="nav-link" href="https://iplitharas.github.io/flagbit/" target="_blank">Docs</a></li>
-        <li class="nav-item"><a class="nav-link" href="#" target="_blank">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="https://iplitharas.github.io/flagbit/about/" target="_blank">About</a></li>
       </ul>
     </div>
   </div>
