--- a/src/api/templates/home.html
+++ b/src/api/templates/home.html
@@ -80,6 +80,7 @@
         <button type="button" class="btn btn-retro-filter" data-value="all">All</button>
         <button type="button" class="btn btn-retro-filter" data-value="true">ON</button>
         <button type="button" class="btn btn-retro-filter" data-value="false">OFF</button>
+          <button type="button" class="btn btn-retro-filter" data-value="expired">Expired</button>
       </div>
     </div>
   </div>
